--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         tools:targetApi="31">
         <activity
             android:name=".SettingActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".MainActivity"
             android:exported="true" >
@@ -27,8 +28,7 @@
         </activity>
         <activity
             android:name=".SplashActivity"
-            android:exported="true"
-            android:parentActivityName=".MainActivity">
+            android:exported="true">
         </activity>
     </application>
 
