--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,12 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.2.0' apply false
-    id 'com.android.library' version '7.2.0' apply false
-}
+buildscript {
+    repositories {
+        maven {
+            url "https://maven.google.com"
+        }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.2.1'
+    }
 }
